--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="location">
                     <img src="./img/solt5.jpg " class="img-responsive"/>
                </div>
-               <div class="title">TRIMMING/PRUNNING</div>
+               <div class="title">TRIMMING</div>
                <p class="text-muted">Keep your trees looking great by having a routine trimming of the branches this would not only make your tree look beautiful but it will also keep it healthy from dead branches or ones that are causing hazardous situations.
 
 </p>
