--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
           <div class="col-md-12">
 
             <h1 class="brand-heading">SOL TREE SERVICE </h1>
+              <i class="fa fa-mobile" aria-hidden="true"> 210-444-2271</i>
             <h2>AFFORDABLE TREE CARE</h2>
+
         <a href="#about" class="page-scroll">
               <button type="button">learn more</button>
         </a>
@@ -111,7 +113,9 @@
 
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
+<h1>INSURED AND BONDED</h1>
 <h1>SERVICES</h1>
+
               <div class="row">
                   <div class="col-md-4 col-sm-6 col-xs-12 text-center">
                       <div class="service-box">
@@ -122,7 +126,8 @@
                     <img src="./img/solt5.jpg " class="img-responsive"/>
                </div>
                <div class="title">TRIMMING</div>
-               <p class="text-muted">Keep your trees looking great by having a routine trimming of the branches this would not only make your tree look beautiful but it will also keep it healthy from dead branches or ones that are causing hazardous situations.
+               <div class="title">PRUNNING</div>
+               <p class="text-muted">Keep your trees looking great by having a routine trimming of the branches this would not only make your tree look beautiful but it will also get rid of dead branches or ones that are causing hazardous situation keeping, your tree safe and healthy.
 
 </p>
 
@@ -140,7 +145,7 @@
                     </div>
                   <div class="title">TREE REMOVAL</div>
                     <p class="text-muted">In the situation that a tree has to be removed due to disease , hazardous location ,storm damage or construction. Sol tree services prides itself in having the best Arborist professionals that will provide accurate and fast disposal of tree.
-.</p>
+</p>
 
 
 
@@ -157,7 +162,7 @@
                     <img src="./img/solt6.jpg" class="img-responsive"/>
                     </div>
                   <div class="title">STUMP REMOVAL</div>
-                    <p class="text-muted">A stump in your backyard is not the prettiest sight. Not only that but it also becomes a home for various unwanted insects swell as trip hazards.</p>
+                    <p class="text-muted">A stump in your backyard is not the prettiest sight to see. Not only does it becomes a home for various unwanted insects it can also become a trip hazard.</p>
 
 
 
@@ -216,7 +221,7 @@
                   <img src="./img/solt7.jpg" class="img-responsive" />
                   </div>
                 <div class="title">COMMERCIAL</div>
-                  <p class="text-muted">From small businesses, HOAs to industrial parkways we provide quality tree solutions maintaining and professional environment.</p>
+                  <p class="text-muted">From small businesses, HOAs to industrial parkways we provide quality tree solutions maintaining a safe and professional environment.</p>
 
 
 
