--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
         <div class="container">
           <div class="row">
           <div class="col-md-12">
-
             <h1 class="brand-heading">SOL TREE SERVICE </h1>
-              <i class="fa fa-mobile" aria-hidden="true"> 210-444-2271</i>
+            <i class="fa fa-mobile" aria-hidden="true"> 210-444-2271</i>
             <h2>AFFORDABLE TREE CARE</h2>
 
         <a href="#about" class="page-scroll">
@@ -127,7 +126,7 @@
                </div>
                <div class="title">TRIMMING</div>
                <div class="title">PRUNNING</div>
-               <p class="text-muted">Keep your trees looking great by having a routine trimming of the branches this would not only make your tree look beautiful but it will also get rid of dead branches or ones that are causing hazardous situation keeping, your tree safe and healthy.
+               <p class="text-muted">Keep your trees looking great by having a routine trimming of the branches this would not only make your tree look beautiful but it will also get rid of dead branches or ones that are causing hazardous situation, keeping your tree safe and healthy.
 
 </p>
 
@@ -221,7 +220,7 @@
                   <img src="./img/solt7.jpg" class="img-responsive" />
                   </div>
                 <div class="title">COMMERCIAL</div>
-                  <p class="text-muted">From small businesses, HOAs to industrial parkways we provide quality tree solutions maintaining a safe and professional environment.</p>
+                  <p class="text-muted">From small businesses, HOAs to industrial parkways we provide quality tree solutions maintaining and professional environment.</p>
 
 
 
