--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                   <img src="./img/solt7.jpg" class="img-responsive" />
                   </div>
                 <div class="title">COMMERCIAL</div>
-                  <p class="text-muted">From small businesses, HOAs to industrial parkways we provide quality tree solutions maintaining and professional environment.</p>
+                  <p class="text-muted">From small businesses, HOAs to industrial parkways we provide quality tree solutions maintaining a safe and professional environment.</p>
 
 
 
