--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    SOL<span class="light">TREE SERVICES</span>
+                  <div class="img2"><img src="./img/larry.jpg"/>TREE SERVICES</div>
+                <!--     SOL<span class="light">TREE SERVICES</span>
                     <h5>20 YEARS OF EXPERIENCE</h5>
                 </a>
+                -->
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -60,7 +62,7 @@
                         <a class="page-scroll" href="#download">Residential/Commercial</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#social">Social Media</a>
+                        <a class="page-scroll" href="#">Gallery</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#"><i class="fa fa-mobile" aria-hidden="true"></i>210-444-2271</a>
@@ -78,7 +80,7 @@
         <div class="container">
           <div class="row">
           <div class="col-md-12">
-            <h1 class="brand-heading">SOL TREE SERVICE </h1>
+            <div class="brand-heading">SOL TREE SERVICE </div>
             <i class="fa fa-mobile" aria-hidden="true"> 210-444-2271</i>
             <h2>AFFORDABLE TREE CARE</h2>
 
@@ -97,8 +99,8 @@
 
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
-<h1>INSURED AND BONDED</h1>
-<h1>SERVICES</h1>
+<h1>San Antonio Most trusted tree care company</h1>
+<h3>20 years of experince Licensed and Insured</h3>
 
               <div class="row">
                   <div class="col-md-4 col-sm-6 col-xs-12 text-center">
@@ -111,7 +113,7 @@
                </div>
                <div class="title">TRIMMING</div>
                <div class="title">PRUNNING</div>
-               <p class="text-muted">Keep your trees looking great by having a routine trimming of the branches this would not only make your tree look beautiful but it will also get rid of dead branches or ones that are causing hazardous situation, keeping your tree safe and healthy.
+               <p class="text-muted">Keep your trees looking great by having a routine Prunning/Trimming of the branches this would not only make your tree look beautiful but it will also get rid of dead branches or ones that are causing hazardous situation, keeping your tree safe and healthy.
 
 </p>
 
@@ -160,7 +162,7 @@
 
 
 
-      <h1>GIVE US A CALL</h1>
+      <h1>Give Us A Call For A Free Estimate</h1>
         <i class="fa fa-mobile" aria-hidden="true"> 210-444-2271</i>
     </section>
 
@@ -282,7 +284,7 @@
 
     </div>
     </section>
-    
+
     <!-- Footer -->
     <footer>
         <div class="container text-center">
