--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                     <img src="./img/solt5.jpg " class="img-responsive"/>
                </div>
                <div class="title">TRIMMING</div>
-               <div class="title">PRUNNING</div>
-               <p class="text-muted">Keep your trees looking great by having a routine Prunning/Trimming of the branches this would not only make your tree look beautiful but it will also get rid of dead branches or ones that are causing hazardous situation, keeping your tree safe and healthy.
+               <div class="title">PRUNING</div>
+               <p class="text-muted">Keep your trees looking great by having a routine Pruning/Trimming of the branches this would not only make your tree look beautiful but it will also get rid of dead branches or ones that are causing the hazardous situation, keeping your tree safe and healthy.
 
 </p>
 
@@ -130,7 +130,7 @@
                     <img src="./img/solt3.jpg" class="img-responsive" />
                     </div>
                   <div class="title">TREE REMOVAL</div>
-                    <p class="text-muted">In the situation that a tree has to be removed due to disease , hazardous location ,storm damage or construction. Sol tree services prides itself in having the best Arborist professionals that will provide accurate and fast disposal of tree.
+                    <p class="text-muted">In the situation that a tree has to be removed due to disease, hazardous location, storm damage or construction. Sol tree services pride's itself in having the best Arborist professionals that will provide accurate and fast disposal of the tree.
 </p>
 
 
@@ -179,7 +179,7 @@
                   <img src="./img/solt8.jpg " class="img-responsive"/>
              </div>
              <div class="title">RESIDENTIAL</div>
-             <p class="text-muted">We are proud to serve our residential community. We understand that a unwanted tree or one that needs to be maintained can feel like a impossible task due to it being in a tricky situation or fear of further damaging your property. Here At Sol Tree Services we will answer any questions and ultimately resolve the issue.</p>
+             <p class="text-muted">We are proud to serve our residential community. We understand that an unwanted tree or one that needs to be maintained can feel like an impossible task due to it being in a tricky location or fear of further damaging your property. Here At Sol Tree Services, we pride our self in our proven methods to maintain and remove a tree even in the difficult situations.</p>
 
 
 
