--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="container">
           <div class="row">
           <div class="col-md-12">
-            <div class="brand-heading">SOL TREE SERVICE </div>
+            <div class="brand-heading">SOL TREE SERVICES </div>
             <i class="fa fa-mobile" aria-hidden="true"> 210-444-2271</i>
             <h2>AFFORDABLE TREE CARE</h2>
 
