--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
   <link rel="manifest" href="favicons/manifest.json">
   <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="http://www.soltreesa.com/favicon.ico" type="image/jpeg">
 
 
     <title>SOL TREE SERVICES</title>
