--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="author" content="">
     <meta name="theme-color" content="#ffffff">
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="150x150" href="favicons/st.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
   <link rel="manifest" href="favicons/manifest.json">
   <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
-  <link rel="icon" type="image/png" href="favicons/st.png" />
+  <link rel="icon" type="image/png" href="favicons/favicon.ico" />
 
 
 
